# Twinstick_shooter

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
Twinstick_client/: Cargo.toml
Twinstick_client/src/: lib.rs
Twinstick_logic/: Cargo.toml
Twinstick_logic/src/: bullet.rs  collisions.rs  enemy.rs  game.rs  lib.rs  object.rs  player.rs  section.rs  section_layout.rs  send_structs.rs  static_object.rs  world.rs
Twinstick_server/: Cargo.toml
Twinstick_server/src/: main.rs
resources/fonts/: azonix.fnt
resources/models/: 1MainCharacter.glb  45De.blend  45DeDeux.blend  45DeDeux.csv  45DeDeux.glb  45DeFlat.blend  45DeFlat.blend1  45DeFlat.csv  45DeFlat.glb  45DeToia.blend  45DeToia.blend1  45DeToia.csv  45DeToia.glb  45DeUpAndDown.blend  45DeUpAndDown.blend1  45DeUpAndDown.csv  45DeUpAndDown.glb  Birdhouse.blend  Birdhouse2.blend  Birdhouse3.blend  HouseL.blend  HouseL.blend1  HouseL.csv  HouseL.glb  HugCube.blend  MainCharacter.blend  MainCharacter.blend1  MainCharacter.glb  bullet.blend  bullet.blend1  bullet.glb  claw.blend  debug_cube.blend  debug_cube.blend1  debug_cube.csv  debug_cube.glb  enemy.blend  enemy.blend1  enemy.glb  floor.glb  (+61 more)
resources/models/test/: houseone.gltf
src/: main.rs
src/modules/: camera_handling.rs  collisions.rs  mod.rs
src/modules/buffs/: ammo_refill.rs  coin.rs  curve.rs  homing.rs  mod.rs  projectile_lifetime.rs  projectile_speed.rs  weapon_clip_size.rs
src/modules/collisions/: bullet_collision.rs  character_collision.rs  collisions.rs  mod.rs
src/modules/controllers/: mod.rs
src/modules/entity/: club_enemy.rs  (+5 more)
(+66 files in other folders)
