[package]
name = "twinstick_interface"
version = "0.0.1"
authors = ["Lilith645 <lilith@inet-sys.com>"]
edition = "2018"

[dependencies]
maat_graphics = { path = "../Maat-Graphics/" }
maat_input_handler = { path = "./Maat-InputHandler/" }
parking_lot = "0.9"
rand = "0.7.0"
rand_pcg = "0.2.0"
twinstick_logic = { path = "./Twinstick_logic/" }
twinstick_client = { path = "./Twinstick_client/" }
